@@ -1,3 +1,11 @@
+Next release
+------------
+
+- Fix some cases where the creation of extremely large output buffers (greater
+  than 2GB, suspected to be buffers added via ``wsgi.file_wrapper``) might
+  cause an OverflowError on Python 2.  See
+  https://github.com/Pylons/waitress/issues/47.
+
 0.8.7 (2013-08-29)
 ------------------
 
